--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <option value="project-astrats22">Astra TS-22</option>
     <option value="project-beretta950b">Beretta 950B Minx</option>
     <option value="project-bersa380cc">Bersa Thunder 380 CC</option>
+    <option value="project-browningm1919a4">Browning M1919-A4</option>
+    <option value="project-m1911a1">Colt 1911-A1</option>
     <option value="project-sti2011">STI 2011</option>
     <option value="project-antaresp6">Antares P6</option>
     <option value="project-curtatype1">Curta Type 1</option>
@@ -58,6 +60,36 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
       <h5 class="card-title">Bersa Thunder 380 CC</h5>
       <p class="card-text">Bersa Thunder .380 CC (2011), one of the best concealed carry pistols nowadays.</p>
       <a href="models/bersa380cc.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
+<!-- PROJECT: browningm1919a4 -->
+<div class="col" id="project-browningm1919a4">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/browningm1919a4/render0.jpg" class="card-img-top" alt="Browning M1919-A4">
+    <div class="card-body">
+      <h5 class="card-title">Browning M1919-A4</h5>
+      <p class="card-text">Browning M1919A4 machinegun, chambered in 30-06 Springfield caliber, used in WW2, Korea and Vietnam wars. There were several similar versions (i.e. M37), but this one is the oldest one.
+Complements previous models:
+C74620 Traverse &amp; Elevation Mechanism (ca.1942)
+US Army M2 Tripod for .30 Machineguns (ca. 1940)
+Many thanks to Nap Bollemeijer for his original work.
+This is a correction, completion and assembly of all parts, based on original blueprints from Rock Island Arsenal, Ordnance Dpt. of the US Army.</p>
+      <a href="models/browningm1919a4.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
+<!-- PROJECT: m1911a1 -->
+<div class="col" id="project-m1911a1">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/m1911a1/render1.jpg" class="card-img-top" alt="Colt 1911-A1">
+    <div class="card-body">
+      <h5 class="card-title">Colt 1911-A1</h5>
+      <p class="card-text">Colt 1911-A1 modeled from Rio Benson&#39;s Redux blueprint version.
+All parts detailed with corresponding part#</p>
+      <a href="models/m1911a1.html" class="btn btn-primary">View Project</a>
     </div>
   </div>
 </div>
