--- a/models/antaresp6.html
+++ b/models/antaresp6.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Antares P6 – CAD Portfolio</title>
+  <title>teruteru314 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script data-goatcounter="https://teruteru314.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body class="bg-light">
   <div class="container py-5">
+    <h1 class="mb-4 text-center">CAD Model Portfolio of Teruteru</h1>
     <h1 class="mb-4 text-center">Antares P6</h1>
     <h4 class="mb-4 text-muted text-center">Antares P6 italian mechanical calculator (ca. 1950)</h4>
     <div class="row justify-content-center">
@@ -23,77 +26,77 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
       </div>
     </div>
     <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/antares 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('antares 1.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/antares 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('antares 2.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/antares 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('antares 3.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/bottom.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('bottom.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/carriage 1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 1.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/carriage 2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 2.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/carriage 3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 3.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/carriage 4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 4.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/carriage 5.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 5.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/carriage 6.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage 6.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/drum01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('drum01.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/drum02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('drum02.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/operand group.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('operand group.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/antaresp6/upper plate assy.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('upper plate assy.jpg')">
-        </div>
-      </div>
+  </div>
+</div>
     </div>
     <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
@@ -107,7 +110,7 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
+<script>
     var images = ['antares main.jpg','antares 1.jpg','antares 2.jpg','antares 3.jpg','bottom.jpg','carriage 1.jpg','carriage 2.jpg','carriage 3.jpg','carriage 4.jpg','carriage 5.jpg','carriage 6.jpg','drum01.jpg','drum02.jpg','operand group.jpg','upper plate assy.jpg'];
     var currentIndex = 0;
     var imageWebPath = '../assets/img/antaresp6/';
@@ -135,9 +138,9 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
     document.getElementById('imageModal').addEventListener('hidden.bs.modal', function () {
       document.removeEventListener('keydown', keyListener);
     });
-  </script>
+</script>
   <footer class="text-center py-4 text-muted">
-    &copy; 2025 teruteru314
+    &copy; 2025 teruteru314@hotmail.com
   </footer>
 </body>
 </html>
