--- a/models/beretta950b.html
+++ b/models/beretta950b.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Beretta 950B Minx – CAD Portfolio</title>
+  <title>teruteru314 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script data-goatcounter="https://teruteru314.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body class="bg-light">
   <div class="container py-5">
+    <h1 class="mb-4 text-center">CAD Model Portfolio of Teruteru</h1>
     <h1 class="mb-4 text-center">Beretta 950B Minx</h1>
     <h4 class="mb-4 text-muted text-center">Beretta 950-B Minx cal .22 Short (1960)</h4>
     <div class="row justify-content-center">
@@ -24,22 +27,22 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
       </div>
     </div>
     <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/beretta950b/image3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('image3.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/beretta950b/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render2.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/beretta950b/render4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render4.jpg')">
-        </div>
-      </div>
+  </div>
+</div>
     </div>
     <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
@@ -53,7 +56,7 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
+<script>
     var images = ['render1.jpg','image3.jpg','render2.jpg','render4.jpg'];
     var currentIndex = 0;
     var imageWebPath = '../assets/img/beretta950b/';
@@ -81,9 +84,9 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
     document.getElementById('imageModal').addEventListener('hidden.bs.modal', function () {
       document.removeEventListener('keydown', keyListener);
     });
-  </script>
+</script>
   <footer class="text-center py-4 text-muted">
-    &copy; 2025 teruteru314
+    &copy; 2025 teruteru314@hotmail.com
   </footer>
 </body>
 </html>
