--- a/models/bersa380cc.html
+++ b/models/bersa380cc.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bersa Thunder 380 CC – CAD Portfolio</title>
+  <title>teruteru314 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script data-goatcounter="https://teruteru314.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body class="bg-light">
   <div class="container py-5">
+    <h1 class="mb-4 text-center">CAD Model Portfolio of Teruteru</h1>
     <h1 class="mb-4 text-center">Bersa Thunder 380 CC</h1>
     <h4 class="mb-4 text-muted text-center">Bersa Thunder .380 CC pistol (2011)</h4>
     <div class="row justify-content-center">
@@ -22,52 +25,52 @@
       </div>
     </div>
     <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render1.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render1.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render10.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render10.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render2.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render2.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render3.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render3.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render4.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render4.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render6.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render6.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render7.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render7.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render8.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render8.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/bersa380cc/render9.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('render9.jpg')">
-        </div>
-      </div>
+  </div>
+</div>
     </div>
     <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
@@ -81,7 +84,7 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
+<script>
     var images = ['render5.jpg','render1.jpg','render10.jpg','render2.jpg','render3.jpg','render4.jpg','render6.jpg','render7.jpg','render8.jpg','render9.jpg'];
     var currentIndex = 0;
     var imageWebPath = '../assets/img/bersa380cc/';
@@ -109,9 +112,9 @@
     document.getElementById('imageModal').addEventListener('hidden.bs.modal', function () {
       document.removeEventListener('keydown', keyListener);
     });
-  </script>
+</script>
   <footer class="text-center py-4 text-muted">
-    &copy; 2025 teruteru314
+    &copy; 2025 teruteru314@hotmail.com
   </footer>
 </body>
 </html>
