--- a/models/curtatype1.html
+++ b/models/curtatype1.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Curta Type 1 – CAD Portfolio</title>
+  <title>teruteru314 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script data-goatcounter="https://teruteru314.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body class="bg-light">
   <div class="container py-5">
+    <h1 class="mb-4 text-center">CAD Model Portfolio of Teruteru</h1>
     <h1 class="mb-4 text-center">Curta Type 1</h1>
     <h4 class="mb-4 text-muted text-center">Curta Type 1 calculator (ca.1930)</h4>
     <div class="row justify-content-center">
@@ -26,77 +29,77 @@ You can get blueprints and instructions in:</p>
       </div>
     </div>
     <div class="mb-2 text-center text-secondary">Cycle thru images with Right and Left keys.</div>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/carriage01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage01.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/carriage02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage02.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/carriage03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('carriage03.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta01.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta01.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta02.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta02.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta03.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta03.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta04.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta04.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta05.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta05.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta06.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta06.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta07.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta07.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta08.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta08.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta09.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta09.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta10.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta10.jpg')">
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
+  </div>
+</div>
+<div class="col">
+  <div class="card h-100 shadow-sm">
           <img src="../assets/img/curtatype1/curta11.jpg" class="card-img-top project-img" alt="Gallery image" style="cursor:pointer;" onclick="showImageModal('curta11.jpg')">
-        </div>
-      </div>
+  </div>
+</div>
     </div>
     <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
@@ -110,7 +113,7 @@ You can get blueprints and instructions in:</p>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
+<script>
     var images = ['complete group.jpg','carriage01.jpg','carriage02.jpg','carriage03.jpg','curta01.jpg','curta02.jpg','curta03.jpg','curta04.jpg','curta05.jpg','curta06.jpg','curta07.jpg','curta08.jpg','curta09.jpg','curta10.jpg','curta11.jpg'];
     var currentIndex = 0;
     var imageWebPath = '../assets/img/curtatype1/';
@@ -138,9 +141,9 @@ You can get blueprints and instructions in:</p>
     document.getElementById('imageModal').addEventListener('hidden.bs.modal', function () {
       document.removeEventListener('keydown', keyListener);
     });
-  </script>
+</script>
   <footer class="text-center py-4 text-muted">
-    &copy; 2025 teruteru314
+    &copy; 2025 teruteru314@hotmail.com
   </footer>
 </body>
 </html>
