--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>teruteru314 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .project-img {
+      max-height: 200px;
+      object-fit: contain;
+    }
+  </style>
   <script data-goatcounter="https://teruteru314.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </head>
@@ -31,7 +37,7 @@
 </html><!-- PROJECT: antaresp6 -->
 <div class="col" id="project-antaresp6">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/antaresp6/antares main.jpg" class="card-img-top" alt="Antares P6">
+    <img src="assets/img/antaresp6/antares main.jpg" class="card-img-top project-img" alt="Antares P6">
     <div class="card-body">
       <h5 class="card-title">Antares P6</h5>
       <p class="card-text">Later model of an Antares P6 Italian made calculator, from around 1950.
@@ -43,7 +49,7 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
 <!-- PROJECT: astrats22 -->
 <div class="col" id="project-astrats22">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS-22">
+    <img src="assets/img/astrats22/render1.jpg" class="card-img-top project-img" alt="Astra TS-22">
     <div class="card-body">
       <h5 class="card-title">Astra TS-22</h5>
       <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
@@ -55,7 +61,7 @@ See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-t
 <!-- PROJECT: beretta950b -->
 <div class="col" id="project-beretta950b">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/beretta950b/render1.jpg" class="card-img-top" alt="Beretta 950B Minx">
+    <img src="assets/img/beretta950b/render1.jpg" class="card-img-top project-img" alt="Beretta 950B Minx">
     <div class="card-body">
       <h5 class="card-title">Beretta 950B Minx</h5>
       <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
@@ -68,7 +74,7 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
 <!-- PROJECT: bersa380cc -->
 <div class="col" id="project-bersa380cc">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/bersa380cc/render5.jpg" class="card-img-top" alt="Bersa Thunder 380 CC">
+    <img src="assets/img/bersa380cc/render5.jpg" class="card-img-top project-img" alt="Bersa Thunder 380 CC">
     <div class="card-body">
       <h5 class="card-title">Bersa Thunder 380 CC</h5>
       <p class="card-text">Bersa Thunder .380 CC (2011), one of the best concealed carry pistols nowadays.</p>
@@ -79,7 +85,7 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
 <!-- PROJECT: browningm1919a4 -->
 <div class="col" id="project-browningm1919a4">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/browningm1919a4/render0.jpg" class="card-img-top" alt="Browning M1919-A4">
+    <img src="assets/img/browningm1919a4/render0.jpg" class="card-img-top project-img" alt="Browning M1919-A4">
     <div class="card-body">
       <h5 class="card-title">Browning M1919-A4</h5>
       <p class="card-text">Browning M1919A4 machinegun, chambered in 30-06 Springfield caliber, used in WW2, Korea and Vietnam wars. There were several similar versions (i.e. M37), but this one is the oldest one.
@@ -95,7 +101,7 @@ This is a correction, completion and assembly of all parts, based on original bl
 <!-- PROJECT: curtatype1 -->
 <div class="col" id="project-curtatype1">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/curtatype1/complete group.jpg" class="card-img-top" alt="Curta Type 1">
+    <img src="assets/img/curtatype1/complete group.jpg" class="card-img-top project-img" alt="Curta Type 1">
     <div class="card-body">
       <h5 class="card-title">Curta Type 1</h5>
       <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
@@ -110,7 +116,7 @@ You can get blueprints and instructions in:</p>
 <!-- PROJECT: m1911a1 -->
 <div class="col" id="project-m1911a1">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/m1911a1/render1.jpg" class="card-img-top" alt="Colt 1911-A1">
+    <img src="assets/img/m1911a1/render1.jpg" class="card-img-top project-img" alt="Colt 1911-A1">
     <div class="card-body">
       <h5 class="card-title">Colt 1911-A1</h5>
       <p class="card-text">Colt 1911-A1 modeled from Rio Benson&#39;s Redux blueprint version.
@@ -122,7 +128,7 @@ All parts detailed with corresponding part#</p>
 <!-- PROJECT: sti2011 -->
 <div class="col" id="project-sti2011">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/sti2011/render3.jpg" class="card-img-top" alt="STI 2011">
+    <img src="assets/img/sti2011/render3.jpg" class="card-img-top project-img" alt="STI 2011">
     <div class="card-body">
       <h5 class="card-title">STI 2011</h5>
       <p class="card-text">This is one of the many incarnations of the renewed .45 1911 pistol but with a double tier magazine for 13 rounds. It uses most of the standard Colt 1911 parts.</p>
