--- a/models/browningm1919a4.html
+++ b/models/browningm1919a4.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>teruteru314 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .project-img {
+      max-height: 200px;
+      object-fit: contain;
+    }
+  </style>
   <script data-goatcounter="https://teruteru314.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </head>
