--- a/index.html
+++ b/index.html
@@ -138,14 +138,12 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
       <h5 class="card-title">Curta Type 1</h5>
       <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
 Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
-See also:
-http://curta.org/wiki
-You can get blueprints and instructions in:</p>
+See also: http://curta.org/wiki
+Check this video:  https://youtu.be/loI1Kwed8Pk</p>
       <a href="models/curtatype1.html" class="btn btn-primary">View Project</a>
     </div>
   </div>
 </div>
-
 <!-- PROJECT: eta6497 -->
 <div class="col" id="project-eta6497">
   <div class="card h-100 shadow-sm">
