--- a/models/curtatype1.html
+++ b/models/curtatype1.html
@@ -26,9 +26,8 @@
           <div class="card-body">
             <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
 Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
-See also:
-http://curta.org/wiki
-You can get blueprints and instructions in:</p>
+See also: http://curta.org/wiki
+Check this video:  https://youtu.be/loI1Kwed8Pk</p>
             <a href="../assets/files/curtatype1/curta type 1 (step).zip" class="btn btn-primary" download>Download ZIP</a>
           </div>
         </div>
