--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <option value="project-beretta950b">Beretta 950B Minx</option>
     <option value="project-bersa380cc">Bersa Thunder 380 CC</option>
     <option value="project-browningm1919a4">Browning M1919-A4</option>
+    <option value="project-lugerp08">Luger P08</option>
+    <option value="project-lugerp08long">Luger P08</option>
     <option value="project-m1911a1">Colt 1911-A1</option>
     <option value="project-sti2011">STI 2011</option>
     <option value="project-antaresp6">Antares P6</option>
@@ -92,6 +94,30 @@ This is a correction, completion and assembly of all parts, based on original bl
   </div>
 </div>
 
+<!-- PROJECT: lugerp08 -->
+<div class="col" id="project-lugerp08">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/lugerp08/render1.jpg" class="card-img-top project-img" alt="Luger P08">
+    <div class="card-body">
+      <h5 class="card-title">Luger P08</h5>
+      <p class="card-text">Started to be built in 1900, suffered many modifications thru the years. This is from a 1916 (very hard to read) blueprint.</p>
+      <a href="models/lugerp08.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
+<!-- PROJECT: lugerp08long -->
+<div class="col" id="project-lugerp08long">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/lugerp08long/render1.jpg" class="card-img-top project-img" alt="Luger P08">
+    <div class="card-body">
+      <h5 class="card-title">Luger P08</h5>
+      <p class="card-text">Known as &quot;Carbine Luger&quot; or Artillery Luger&quot; it wasn&#39;t specific to those type of units. Not many specimen of this centenary baby exist nowadays. It was capable of 800 meters shots !! Luger engineering was so awesome that the tangent sight blade is tilted 7&#186; from vertical to compensate the rifling effect on long shots.</p>
+      <a href="models/lugerp08long.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
 <!-- PROJECT: m1911a1 -->
 <div class="col" id="project-m1911a1">
   <div class="card h-100 shadow-sm">
@@ -144,6 +170,7 @@ Check this video:  https://youtu.be/loI1Kwed8Pk</p>
     </div>
   </div>
 </div>
+
 <!-- PROJECT: eta6497 -->
 <div class="col" id="project-eta6497">
   <div class="card h-100 shadow-sm">
