--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <div class="card-body">
       <h5 class="card-title">Astra TS-22</h5>
       <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
-See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
+See:
+http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
       <a href="models/astrats22.html" class="btn btn-primary">View Project</a>
     </div>
   </div>
 </div>
-
 <!-- PROJECT: beretta950b -->
 <div class="col" id="project-beretta950b">
   <div class="card h-100 shadow-sm">
