--- a/models/astrats22.html
+++ b/models/astrats22.html
@@ -24,8 +24,7 @@
         <div class="card mb-4 shadow-sm">
           <img src="../assets/img/astrats22/render1.jpg" class="card-img-top project-img" alt="Astra TS-22" style="cursor:pointer;" onclick="showImageModal('render1.jpg')">
           <div class="card-body">
-            <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
-See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
+<p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.<br>See:<br>http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
             <a href="../assets/files/astrats22/astra_ts-22_(step).zip" class="btn btn-primary" download>Download ZIP</a>
           </div>
         </div>
